tests/fsharp/typecheck/sigs/neg_byref_16.bsl

neg_byref_16.fs(3,33,3,42): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
